Bug 346013 - File type filter to "All" for export
Summary: File type filter to "All" for export
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 2.9
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Victor Wåhlström
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-09 08:33 UTC by David
Modified: 2016-02-24 21:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
krita export dialog E17 (129.04 KB, image/jpeg)
2015-04-09 12:25 UTC, David
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David 2015-04-09 08:33:53 UTC
Using export I almost exclusively want to export to something else than .kra but the "Files of type:" is by default set to .kra, hiding all other files.
I most often want to see other files of the same type already existing in the folder, png or tiff for example, thus having to change filter to the desired type or to "All supported formats". This is an extra unnecessary step.

Please set default file type filtering to "All supported formats" in the export dialog. (I would like this to be default for Save and Save as too but can see the philosophy behind filtering only .kra so I wont push it...)

Reproducible: Always
Comment 1 Halla Rempt 2015-04-09 08:43:58 UTC
Hi David,

Well, it's a problem with the various file dialogs we try to support. From your report, I'm guessing you're using a GTK-based desktop system, Unity, Gnome, Mate or CiInnamon. For some reason, the GTK file dialog makes the .kra entry default, even though All is the first in the list. The KDE file dialog gives us All Supported files by default. Right now, I'm not sure what the Windows, the OSX or the Qt file dialogs do!
Comment 2 David 2015-04-09 09:24:48 UTC
Ah, forgot to mention. Ubuntu 14.04 using Unity. Also on Bodhi linux 2.4.0 using the Enlightenment 0.17.4 desktop (not GTK (?))
Comment 3 Halla Rempt 2015-04-09 11:49:11 UTC
I do wonder which dialog you see on Enlightenment -- the GTK one or the Qt one?
Comment 4 David 2015-04-09 12:25:56 UTC
Created attachment 91962 [details]
krita export dialog E17
Comment 5 David 2015-04-09 12:26:37 UTC
Don't know how to tell the difference. Attaching a screenshot.
Comment 6 Halla Rempt 2015-04-16 09:41:16 UTC
Thanks! That's the Qt one.
Comment 7 Victor Wåhlström 2016-02-24 21:17:53 UTC
Git commit 53aa1a84adce984b149e9b137ce6afa135561760 by Victor Wåhlström.
Committed on 24/02/2016 at 21:14.
Pushed by victorw into branch 'master'.

Set default filter when exporting to "All supported formats"

M  +2    -1    libs/ui/KisMainWindow.cpp

http://commits.kde.org/krita/53aa1a84adce984b149e9b137ce6afa135561760