Set default filter when exporting to "All supported formats"

BUG: 346013